project(WildKnight)
cmake_minimum_required(VERSION 2.8)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")

find_package(Boost COMPONENTS unit_test_framework date_time REQUIRED)
include_directories(${Boost_INCLUDE_DIRS})

set(HDRS

)

set(SRCS
    unit_tests.cpp
)

add_executable(${PROJECT_NAME} ${HDRS} ${SRCS})
target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES})
